Updated styles, footer, and added personal image

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ Bootstrap 5 Dashboard Admin Template
                                     <img src="images/medium-shot-happy-man-smiling.jpg" class="profile-image img-fluid me-3" alt="">
 
                                     <div class="d-flex flex-column">
-                                        <small>Thomas</small>
-                                        <a href="#">thomas@site.com</a>
+                                        <small>Jennifer</small>
+                                        <a href="#">chinelojennifer.cj@gmail.com</a>
                                     </div>
                                 </div>
                             </li>
@@ -273,7 +273,7 @@ Bootstrap 5 Dashboard Admin Template
                     <div class="title-group mb-3">
                         <h1 class="h2 mb-0">Overview</h1>
 
-                        <small class="text-muted">Hello Thomas, welcome back!</small>
+                        <small class="text-muted">Hello Jennifer, welcome back to your dashboard</small>
                     </div>
 
                     <div class="row my-4">
@@ -298,7 +298,7 @@ Bootstrap 5 Dashboard Admin Template
 
                                     <div class="ms-auto">
                                         <small>Card Holder</small>
-                                        <p>Thomas</p>
+                                        <p>Jennifer</p>
                                     </div>
                                 </div>
                             </div>
@@ -426,7 +426,7 @@ Bootstrap 5 Dashboard Admin Template
                         <div class="col-lg-5 col-12">
                             <div class="custom-block custom-block-profile-front custom-block-profile text-center bg-white">
                                 <div class="custom-block-profile-image-wrap mb-4">
-                                    <img src="images/medium-shot-happy-man-smiling.jpg" class="custom-block-profile-image img-fluid" alt="">
+                                    <img src="images/IMG_0382.JPG" class="custom-block-profile-image img-fluid" alt="Jennifer">
 
                                     <a href="setting.html" class="bi-pencil-square custom-block-edit-icon"></a>
                                 </div>
@@ -434,14 +434,14 @@ Bootstrap 5 Dashboard Admin Template
                                 <p class="d-flex flex-wrap mb-2">
                                     <strong>Name:</strong>
 
-                                    <span>Thomas Edison</span>
+                                    <span>Orji Jennifer</span>
                                 </p>
 
                                 <p class="d-flex flex-wrap mb-2">
                                     <strong>Email:</strong>
                                     
                                     <a href="#">
-                                        thomas@site.com
+                                        chinelojennifer.cj@gmail.com
                                     </a>
                                 </p>
 
@@ -449,7 +449,7 @@ Bootstrap 5 Dashboard Admin Template
                                     <strong>Phone:</strong>
 
                                     <a href="#">
-                                        (60) 12 345 6789
+                                        08165465953
                                     </a>
                                 </p>
                             </div>
@@ -584,8 +584,8 @@ Bootstrap 5 Dashboard Admin Template
                             <div class="row">
                                 
                                 <div class="col-lg-12 col-12">
-                                    <p class="copyright-text">Copyright © Mini Finance 2048 
-                                    - Design: <a rel="sponsored" href="https://www.tooplate.com" target="_blank">Tooplate</a></p>
+                                    <p class="copyright-text">Copyright © Mini Finance © 2025 | Version 2.0
+                                    - Design: <a rel="sponsored" href="https://www.tooplate.com" target="_blank">Jennifer</a></p>
                                 </div>
 
                             </div>
