Add footer with version and deploy date

--- a/index.html
+++ b/index.html
@@ -584,8 +584,7 @@ Bootstrap 5 Dashboard Admin Template
                             <div class="row">
                                 
                                 <div class="col-lg-12 col-12">
-                                    <p class="copyright-text">Copyright © Mini Finance © 2025 | Version 2.0
-                                    - Design: <a rel="sponsored" href="https://www.tooplate.com" target="_blank">Jennifer</a></p>
+                                    <p class="copyright-text">Mini Finance v1.0 — Deployed on 09 Sep 2025 — By Jennife </p>
                                 </div>
 
                             </div>
