Added a dynamic date ath the footer and also created a README.md to document the code used for the task

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ Bootstrap 5 Dashboard Admin Template
                             <div class="row">
                                 
                                 <div class="col-lg-12 col-12">
-                                    <p class="copyright-text">Mini Finance v1.0 — Deployed on 09 Sep 2025 — By Jennife </p>
+                                    <p class="copyright-text">Mini Finance v1.0 —<span id="deploy-date"></span> By Jennifer </p>
                                 </div>
 
                             </div>
@@ -680,6 +680,17 @@ Bootstrap 5 Dashboard Admin Template
             var chart = new ApexCharts(document.querySelector("#chart"), options);
             chart.render();
         </script>
+                 <script>
+  // JavaScript to set today's date
+  const dateElement = document.getElementById("deploy-date");
+  if (dateElement) {
+    const today = new Date();
+    const options = { day: '2-digit', month: 'short', year: 'numeric' };
+    dateElement.textContent = today.toLocaleDateString('en-GB', options);
+  }
+</script>
+
+       
 
     </body>
 </html>
