addedthe commit hash in footer

--- a/index.html
+++ b/index.html
@@ -585,6 +585,10 @@ Bootstrap 5 Dashboard Admin Template
                                 
                                 <div class="col-lg-12 col-12">
                                     <p class="copyright-text">Mini Finance v1.0 —<span id="deploy-date"></span> By Jennifer </p>
+                                    <p> <footer>
+                                     <p>MiniFinance | Online 🟢 | rev: b1948bd | 12 Sept 2025</p>
+</footer>
+</p>
                                 </div>
 
                             </div>
